--- a/src/datasets/DS_SAP_01_VBAK/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBAK/pbt_aspects.yml
@@ -2,7 +2,7 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: _deleted_
+  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -10,13 +10,6 @@ schema:
       mappings: []
       tags: []
   - name: VBELN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -814,6 +807,20 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: OIPBL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LAST_CHANGED_BY_USER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: HANDOVERLOC
     type: string
     nullable: true
@@ -821,98 +828,441 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_LRESN
+  - name: EXT_BUS_SYST_ID
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_EQUNR
+  - name: EXT_REF_DOC_ID
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_KZLEI
+  - name: EXT_REV_TMSTMP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_NBOMU
+  - name: APM_APPROVAL_STATUS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_RSTYP
+  - name: APM_APPROVAL_REASON
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_VDATE
+  - name: APM_REJECTION_REASON
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_ODATE
+  - name: _DATAAGING
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_RDATE
+  - name: ABSTK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_RTIME
+  - name: BESTK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_FRDAT
+  - name: CMPSC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_ABDAT
+  - name: CMPSD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_TELF1
+  - name: CMPSI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_LRSAM
+  - name: CMPSJ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _BITMYM_ASMNT
+  - name: CMPSK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CMPS_CM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CMPS_TE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: CMGST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: COSTA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DCSTK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FKSAK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FMSTK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSSTK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: GBSTK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LFGSK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LFSTK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LSSTK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MANEK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RFGSK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: RFSTK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SPSTG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TRSTA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVALL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVALS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVFAK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVFAS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVPRS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVVLK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVVLS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVK01
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVK02
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVK03
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVK04
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVK05
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVS01
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVS02
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVS03
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVS04
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: UVS05
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: WBSTK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOTAL_EMCST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOTAL_SLCST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOTAL_LCCST
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOTAL_PCSTA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOTAL_DGSTA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: TOTAL_SDSSTA
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DP_CLEAR_STA_HDR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: DUMMY_SALESDOC_INCL_EEW_PS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZAPCGKH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: APCGK_EXTENDH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZABDATH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AD01FAREG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AD01BASDOC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: LASTVCHR
     type: string
     nullable: true
     metadata:
@@ -926,56 +1276,98 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: SWENR
+  - name: FSH_KVGR6
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SMENR
+  - name: FSH_KVGR7
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PHASE
+  - name: FSH_KVGR8
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: MTLAUR
+  - name: FSH_KVGR9
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: STAGE
+  - name: FSH_KVGR10
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: HB_CONT_REASON
+  - name: FSH_REREG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: HB_EXPDATE
+  - name: FSH_CQ_CHECK
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: HB_RESDATE
+  - name: FSH_VRSN_STATUS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_TRANSACTION
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_VAS_CG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_CANDATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_SS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: FSH_OS_STG_CHANGE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: J_3GKBAUL
     type: string
     nullable: true
     metadata:
@@ -1073,119 +1465,259 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZMYM_AUFNR
+  - name: DELIVERY_DATE_TYPE_RULE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_ALT_SH_ACTIVE
+  - name: SOLUTION_ORDER_ID
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZOVHDRINV
+  - name: EXT_COMM_SYST_TYPE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZMESAGE_TYPE
+  - name: RETRO_PURCHDOC_CREATION
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_ALT_SH_INDC
+  - name: B2B_MSG_PROCESSING_STATUS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_RECALL_REFNO
+  - name: SDM_VERSION
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_APPLICANT
+  - name: GLO_LOG_REF1_HD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_DATE_SIGN
+  - name: CROSSITEM_PRC_DATE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_CLNC_ST_NO
+  - name: BOB_STATUS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_FORBID_INDC
+  - name: TOTAL_DELIV_RELTD_BILLG_STA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEOW
+  - name: _DMBE_DEALNUMBER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_GOVT_PUR_REQ
+  - name: _DMBE_EVGIDRENEWAL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_GOVT_PO
+  - name: _DMBE_EVGIDCANCEL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_GOVT_CONT
+  - name: _SOPROMET_LRESN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_CAR_DEPOT
+  - name: _SOPROMET_EQUNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_PRIOR
+  - name: _SOPROMET_KZLEI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_ROOT_CAUSE
+  - name: _SOPROMET_NBOMU
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_RSTYP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_VDATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_ODATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_RDATE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_RTIME
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_FRDAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_ABDAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_TELF1
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_VEDAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _BITMYM_REF_BOOK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _SOPROMET_LRSAM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _BITMYM_ASMNT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _BITMYM_AUTO_PGI
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_TOTBILLING_SDH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_DISTRIBUTIONCHANEL_SDH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_NETPRICE_SDH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_SURCOVERRIDECODE_SDH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_DISCOVERRIDECODE_SDH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_CREATEDBYHEADER_SDH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ1_CREATEDONHEADER_SDH
     type: string
     nullable: true
     metadata:
@@ -1227,7 +1759,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
