--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,10 +20,15 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-03 18:08:25'
-    modifiedAt: '2023-04-04 16:58:37'
+    modifiedAt: '2023-04-04 17:02:08'
     datasets:
-      inputs: []
-      outputs: []
+      inputs:
+      - datasets/DS_SAP_01_LIKP
+      - datasets/DS_SAP_01_LIPS
+      - datasets/DS_SAP_01_VBAK
+      - datasets/DS_SAP_01_VBAP
+      outputs:
+      - datasets/MD_DELV_LINE
     subgraphs: []
     dependencies: {}
 datasets:
@@ -32,7 +37,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-04-03 18:36:36'
-    modifiedAt: '2023-04-03 18:36:36'
+    modifiedAt: '2023-04-04 17:01:45'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -47,7 +52,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-04-03 18:37:55'
-    modifiedAt: '2023-04-03 18:37:56'
+    modifiedAt: '2023-04-04 17:01:45'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -62,7 +67,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-04-03 18:39:06'
-    modifiedAt: '2023-04-03 18:39:06'
+    modifiedAt: '2023-04-04 17:01:45'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -77,7 +82,7 @@ datasets:
     description: ''
     author: jcovezd1@its.jnj.com
     createdAt: '2023-04-03 18:40:04'
-    modifiedAt: '2023-04-03 18:40:04'
+    modifiedAt: '2023-04-04 17:01:45'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
