JEKT-314 🔁 Modified source gems to create new datasets     - Pipeline        - SAP_MD_DELV_LINE_BBA_BBL_BBN
❇️ New
    - Dataset
       - DS_SAP_02_LIPS
       - DS_SAP_02_VBAK
       - DS_SAP_02_LIKP
       - DS_SAP_01_VBUP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,13 +20,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-03 18:08:25'
-    modifiedAt: '2023-04-04 17:02:08'
+    modifiedAt: '2023-04-04 17:09:49'
     datasets:
       inputs:
-      - datasets/DS_SAP_01_LIKP
-      - datasets/DS_SAP_01_LIPS
-      - datasets/DS_SAP_01_VBAK
-      - datasets/DS_SAP_01_VBAP
+      - datasets/DS_SAP_01_VBUP
+      - datasets/DS_SAP_02_LIKP
+      - datasets/DS_SAP_02_LIPS
+      - datasets/DS_SAP_02_VBAK
       outputs:
       - datasets/MD_DELV_LINE
     subgraphs: []
@@ -92,6 +92,66 @@ datasets:
         author: jcovezd1@its.jnj.com
         createdAt: '2023-04-03 18:40:04'
         modifiedAt: '2023-04-03 18:40:04'
+  datasets/DS_SAP_02_LIPS:
+    name: DS_SAP_02_LIPS
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-04 17:05:34'
+    modifiedAt: '2023-04-04 17:05:34'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-04 17:05:34'
+        modifiedAt: '2023-04-04 17:05:34'
+  datasets/DS_SAP_02_LIKP:
+    name: DS_SAP_02_LIKP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-04 17:06:55'
+    modifiedAt: '2023-04-04 17:06:55'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-04 17:06:55'
+        modifiedAt: '2023-04-04 17:06:55'
+  datasets/DS_SAP_02_VBAK:
+    name: DS_SAP_02_VBAK
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-04 17:08:15'
+    modifiedAt: '2023-04-04 17:08:15'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-04 17:08:15'
+        modifiedAt: '2023-04-04 17:08:15'
+  datasets/DS_SAP_01_VBUP:
+    name: DS_SAP_01_VBUP
+    description: ''
+    author: jcovezd1@its.jnj.com
+    createdAt: '2023-04-04 17:09:45'
+    modifiedAt: '2023-04-04 17:09:45'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcovezd1@its.jnj.com
+        createdAt: '2023-04-04 17:09:45'
+        modifiedAt: '2023-04-04 17:09:45'
 templates: {}
 jobs: {}
 functions:
