JEKT-14 - New Job and all 21 source systems added     - Job        - JOB_MD_BOM_HDR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -6065,6 +6065,33 @@ jobs:
     createdAt: '2023-03-21 18:50:06'
     modifiedAt: '2023-03-22 17:30:52'
     author: skostadi@its.jnj.com
+  jobs/JOB_MD_BOM_HDR:
+    name: JOB_MD_BOM_HDR
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 ? * 7 *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/JDE_MD_BOM_HDR_BW2
+    - pipelines/SAP_MD_BOM_HDR_ATL_BBL_BWI_FSN_GEU_MBP_P01_SVS_TAI
+    - pipelines/SAP_MD_BOM_HDR_BBA_BBN_HCS_MRS
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-04-04 15:45:43'
+    modifiedAt: '2023-04-04 18:50:01'
+    author: smille29@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 13:37:27'
