--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -20,13 +20,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-21 17:01:44'
-    modifiedAt: '2023-04-04 16:45:31'
+    modifiedAt: '2023-04-04 19:12:02'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0101
       - datasets/DS_JDE_01_F0401
       outputs:
-      - datasets/DS_MD_SUP_PRCHSNG_ORG
+      - datasets/MD_SUP_PRCHSNG_ORG
     subgraphs: []
     dependencies: {}
 datasets:
@@ -35,7 +35,7 @@ datasets:
     description: ''
     author: lsorarra@its.jnj.com
     createdAt: '2023-03-21 17:17:48'
-    modifiedAt: '2023-04-04 16:43:19'
+    modifiedAt: '2023-04-04 19:09:06'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -50,7 +50,7 @@ datasets:
     description: ''
     author: lsorarra@its.jnj.com
     createdAt: '2023-03-21 17:43:17'
-    modifiedAt: '2023-04-04 16:44:24'
+    modifiedAt: '2023-04-04 19:12:02'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -75,6 +75,21 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-04-04 16:05:45'
         modifiedAt: '2023-04-04 16:05:45'
+  datasets/MD_SUP_PRCHSNG_ORG:
+    name: MD_SUP_PRCHSNG_ORG
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-04-04 18:58:38'
+    modifiedAt: '2023-04-04 18:58:38'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-04-04 18:58:38'
+        modifiedAt: '2023-04-04 18:58:38'
 templates: {}
 jobs: {}
 functions:
