--- a/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
+++ b/src/datasets/MD_SUP_PRCHSNG_ORG/pbt_aspects.yml
@@ -17,8 +17,8 @@ schema:
       mappings: []
       tags: []
   - name: PRCHSNG_ORG_NUM
-    type: void
-    nullable: true
+    type: string
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -88,6 +88,41 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l0_upt_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _pk_md5_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _l1_upt_
+    type: timestamp
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: false
     metadata:
       description: ''
