--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -72,9 +72,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 09:54:31'
-    modifiedAt: '2023-04-05 09:54:35'
+    modifiedAt: '2023-04-05 09:59:49'
     datasets:
-      inputs: []
+      inputs:
+      - datasets/DS_JDE_01_F41002
+      - datasets/DS_JDE_01_F4101
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -2734,6 +2736,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-03-21 11:51:31'
         modifiedAt: '2023-03-21 11:51:31'
+  datasets/DS_JDE_01_F41002:
+    name: DS_JDE_01_F41002
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-05 09:59:44'
+    modifiedAt: '2023-04-05 09:59:44'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-05 09:59:44'
+        modifiedAt: '2023-04-05 09:59:44'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
