JEKT-402 Corrected issues with config for re-cycled gem clashing with config for this new pipeline
🔁 Modified
    - Pipeline
       - MD_MATL_ALT_UOM_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
    - Dataset
       - MD_MATL_ALT_UOM
       - DS_JDE_01_F41002

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -72,12 +72,13 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-05 09:54:31'
-    modifiedAt: '2023-04-05 10:46:18'
+    modifiedAt: '2023-04-05 10:57:26'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F41002
       - datasets/DS_JDE_01_F4101
-      outputs: []
+      outputs:
+      - datasets/MD_MATL_ALT_UOM
     subgraphs: []
     dependencies: {}
 datasets:
@@ -1211,7 +1212,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-04-05 10:52:38'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -2741,7 +2742,7 @@ datasets:
     description: ''
     author: natkins7@its.jnj.com
     createdAt: '2023-04-05 09:59:44'
-    modifiedAt: '2023-04-05 09:59:44'
+    modifiedAt: '2023-04-05 10:57:25'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
