JEKT-404 New SAP pipeline created - First datasets & source gems
❇️ New
    - Dataset
       - DS_SAP_01_MARM
       - DS_SAP_MARA_01
    - Pipeline
       - MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -81,6 +81,22 @@ pipelines:
       - datasets/MD_MATL_ALT_UOM
     subgraphs: []
     dependencies: {}
+  pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI:
+    name: MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI
+    description: MD_ALT_UOM pipeline for SAP systems
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-05 11:55:35'
+    modifiedAt: '2023-04-05 12:04:03'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MARM
+      - datasets/DS_SAP_MARA_01
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2752,6 +2768,36 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-05 09:59:44'
         modifiedAt: '2023-04-05 09:59:44'
+  datasets/DS_SAP_01_MARM:
+    name: DS_SAP_01_MARM
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-05 12:01:01'
+    modifiedAt: '2023-04-05 12:01:01'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-05 12:01:01'
+        modifiedAt: '2023-04-05 12:01:01'
+  datasets/DS_SAP_MARA_01:
+    name: DS_SAP_MARA_01
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-04-05 12:03:26'
+    modifiedAt: '2023-04-05 12:03:26'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-04-05 12:03:26'
+        modifiedAt: '2023-04-05 12:03:26'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
