--- a/src/pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI/pbt_aspects.yml
+++ b/src/pipelines/MD_MATL_ALT_UOM_ATL_BBA_BBL_BBN_BWI_FSN_GEU_HCS_MBP_MRS_P01_SVS_TAI/pbt_aspects.yml
@@ -1,4 +1,16 @@
 version: 1
 configurations:
+- svs
+- p01
+- bbl
+- bba
+- bwi
+- tai
+- mrs
+- hcs
 - default
+- atl
+- bbn
+- geu
+- fsn
 dependencies: []
